--- a/GeoGuide1.0/package.json
+++ b/GeoGuide1.0/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.14",
+    "expo": "^51.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "^12.0.7",
     "expo-linking": "~6.3.1",
