--- a/GeoGuide1.0/package.json
+++ b/GeoGuide1.0/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "expo": "^51.0.14",
     "expo-constants": "~16.0.2",
     "expo-font": "^12.0.7",
